Fix Langchain Neo4j retriever issue: Added properties and moved prompt into the code. Performed code cleanup and readme in OntoMapper and KGQS.

--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ NEO4J_USER="neo4j"
 NEO4J_PASSWORD="12345678"
 GEMINI_API_KEY="AIzaSyCLwWkDW03zjzVKUQf3ui5wgcreVJdsMbw"
 HFTOKEN="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"
-GEMINI_MODEL_NAME="gemini-2.0-flash"
+GEMINI_MODEL_NAME="gemini-1.5-flash"
+GRAPHDB_ENDPOINT="http://localhost:7200/repositories/Enhancing-AI-Transparency"
+OUTPUT_BASE_PATH=RAG/Nodes-Rel
