--- a/.env.copy
+++ b/.env.copy
@@ -4,3 +4,4 @@ NEO4J_PASSWORD=""
 GEMINI_API_KEY=""
 HFTOKEN=""
 GEMINI_MODEL_NAME="gemini-2.0-flash"
+GRAPHDB_ENDPOINT="http://localhost:7200/repositories/
