All readme added, requierments.txt and final rag model

--- a/.env.copy
+++ b/.env.copy
@@ -4,4 +4,5 @@ NEO4J_PASSWORD=""
 GEMINI_API_KEY=""
 HFTOKEN=""
 GEMINI_MODEL_NAME="gemini-2.0-flash"
-GRAPHDB_ENDPOINT="http://localhost:7200/repositories/
+GRAPHDB_ENDPOINT="http://localhost:7200/repositories/your-repo-name"
+OUTPUT_BASE_PATH=RAG/Nodes-Rel
